--- a/parking-control/src/main/resources/application.properties
+++ b/parking-control/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url= jdbc:postgresql://localhost:5555/parking-control-db
 spring.datasource.username=postgres
-spring.datasource.password=4af4hv99GHJ!
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
